[gd_scene load_steps=4 format=3 uid="uid://c4qrq5kj8wqt4"]

[ext_resource type="Script" uid="uid://b287ob3eypiht" path="res://src/ui/pause_menu.gd" id="1_pause_menu"]
[ext_resource type="Theme" uid="uid://ntqh6xyylbj0" path="res://assets/theme.tres" id="2_theme"]
[ext_resource type="PackedScene" uid="uid://dj3ng2wmtqap8" path="res://src/ui/screens/options_screen.tscn" id="3_options"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pause_menu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="MainContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")

[node name="CenterContainer" type="CenterContainer" parent="MainContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="PauseLabel" type="Label" parent="MainContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_theme")
theme_type_variation = &"HeaderLarge"
text = "PAUSED"
horizontal_alignment = 1

[node name="ButtonsContainer" type="VBoxContainer" parent="MainContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="ResumeButton" type="Button" parent="MainContainer/CenterContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
theme = ExtResource("2_theme")
text = "Resume"

[node name="OptionsButton" type="Button" parent="MainContainer/CenterContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
theme = ExtResource("2_theme")
text = "Options"

[node name="MainMenuButton" type="Button" parent="MainContainer/CenterContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
theme = ExtResource("2_theme")
text = "Main Menu"

[node name="ExitButton" type="Button" parent="MainContainer/CenterContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
theme = ExtResource("2_theme")
text = "Exit to Desktop"

[node name="OptionsScreen" parent="." instance=ExtResource("3_options")]
visible = false
layout_mode = 1

[connection signal="pressed" from="MainContainer/CenterContainer/VBoxContainer/ButtonsContainer/ResumeButton" to="." method="_on_resume"]
[connection signal="pressed" from="MainContainer/CenterContainer/VBoxContainer/ButtonsContainer/OptionsButton" to="." method="_on_open_options"]
[connection signal="pressed" from="MainContainer/CenterContainer/VBoxContainer/ButtonsContainer/MainMenuButton" to="." method="_on_exit_to_main_menu"]
[connection signal="pressed" from="MainContainer/CenterContainer/VBoxContainer/ButtonsContainer/ExitButton" to="." method="_on_exit_to_desktop"]
[connection signal="close_options" from="OptionsScreen" to="." method="_on_close_options"]
